
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ calloc (int,int) ;
 int free (char*) ;
 int memcpy (char*,char*,int) ;
 int strcat (char*,char*) ;
 int strlen (char*) ;

char *
netbios_encode(char *ndata, char service)
{
 char *tmpdata, *data, *nret;
 unsigned long dlen;
 char odiv, omod, o;
 int i;

 data = (char *)calloc(17, 1);
 memcpy(data, ndata, strlen(ndata));

 dlen = strlen(data);
 while (dlen < 15) {
  strcat(data, "\x20");
  dlen++;
 }

 memcpy(data+strlen(data), &service, 1);

 nret = (char *)calloc(strlen(data)*2+1, 1);
 tmpdata = nret;

 for (i=0; i<16; i++) {
  o = (char)data[i];
  odiv = o / 16;
  odiv = odiv + 0x41;
  omod = o % 16;
  omod = omod + 0x41;
  *tmpdata++ = odiv;
  *tmpdata++ = omod;
 }

 free(data);

return nret;
}
